fix: fixed modal open button z-index

--- a/apps/ideas/src/components/modules/IdeasBetaFeedbackModal/IdeasBetaFeedbackModal.css
+++ b/apps/ideas/src/components/modules/IdeasBetaFeedbackModal/IdeasBetaFeedbackModal.css
@@ -51,6 +51,7 @@
   position: fixed;
   bottom: 2rem;
   right: 2rem;
+  z-index: 10;
 }
 
 .open-button::before {
